--- a/templates/signup.html
+++ b/templates/signup.html
@@ -36,6 +36,7 @@
 </head>
 <body>
     <div class="box">
+        <h2>Welcome To FluoTrack - A Fluorescence-Based Microscopy Tool</h2>
         <h2>Create Account</h2>
         <form method="POST" action="/signup">
             <label for="username">Username</label>
